# buddaraysh

./: .gitignore  AR-README.md  Cargo.toml  README.md  buddaraysh.desktop  flake.nix
.nixos-vm/: buddaraysh.nix  configuration.nix  vm.sh
src/: commands.rs  cursor.rs  data.rs  drawing.rs  element.rs  focus.rs  handlers.rs  input.rs  lib.rs  main.rs  render.rs  ssd.rs  state.rs  systemd.rs  udev.rs  window.rs  winit.rs  workspace.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  keyboard_shortcuts_inhibit.rs  layer_shell.rs  mod.rs  pointer_contraints.rs  xdg_shell.rs
src/shell/: mod.rs  x11.rs  xdg.rs
src/shell/layout/: direction.rs  floating.rs  mod.rs  tiling.rs
src/utils/: geometry.rs
