[package]
name = "buddaraysh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "3f491eb", optional = true }
image = {version = "0.24.0", default-features = false, optional = true}
xcursor = { version = "0.3.3", optional = true }
profiling = "1.0.11"
thiserror = "1.0.50"
tracing-appender = "0.2.3"

[dependencies.smithay]
default-features = false
version = "0.3.0"
git = "https://github.com/Smithay/smithay"
rev = "3f491eb"
features = ["desktop", "wayland_frontend"]

[dependencies.x11rb]
default-features = false
features = ["composite"]
optional = true
version = "0.12.0"

[features]
default = ["egl", "winit", "x11", "udev", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "image",
  "smithay/renderer_gl",
  "smithay/renderer_multi",
  "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor"]
x11 = ["smithay/backend_x11", "x11rb", "smithay/renderer_gl", "smithay/backend_vulkan"]
